@@ -1,5 +1,7 @@
 0.02 2014-09-03
         - Change to M::P::Notification.
+        - Change to M::P::Localize.
+	- Improved helper performance using helpers object.
 
 0.01 2013-06-16
         - Initial submission to GitHub.
